# glob-posix

./: .gitignore  .travis.yml  LICENSE  Readme.md  glob-posix.cabal  stack-7.yaml  stack.yaml
bench/: Bench.hs
docs/: bench-1.html  bench-2.html
src/: Glob.hs
src/System/Directory/: Glob.hsc
src/System/Directory/Glob/: GNU.hsc  Internal.hsc
src/System/Directory/Glob/GNU/: Compat.hsc
test/: Spec.hs
