name:                glob-posix
version:             0.1.0.0
synopsis:            Haskell bindings for POSIX glob library.
description:         Please see README.md
homepage:            https://github.com/rdnetto/glob-posix#readme
license:             Apache
license-file:        LICENSE
author:              Reuben D'Netto
maintainer:          rdnetto@gmail.com
copyright:           2016 Reuben D'Netto
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Directory.Glob
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite glob-posix-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       directory,
                       filepath,
                       glob-posix,
                       tasty,
                       tasty-hunit,
                       unix
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/rdnetto/glob-posix

